--- a/projet_app_web_commerce/WebContent/accueilAdmin.xhtml
+++ b/projet_app_web_commerce/WebContent/accueilAdmin.xhtml
@@ -3,7 +3,7 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:b="http://bootsfaces.net/ui">
+	xmlns:b="http://bootsfaces.net/ui" xmlns:p="http://primefaces.org/ui">
 
 <h:head>
 	<title>page d'accueil de l'admin</title>
@@ -14,47 +14,187 @@
 		library="primefaces" />
 
 
+	<h:outputStylesheet library="style" name="MagasinListGrid.css" />
 	<h:outputStylesheet library="style" name="styleHeader.css" />
 
 </h:head>
-<body>
+<h:body style="background-color: #FFF5EB">
 
-	<b:navBar id="header" brand="Brand" brandHref="#" fluid="true">
+	<b:navBar id="header" brand="Brand" brandHref="Magasin.xhtml" fluid="true"
+		style="background-color: #DAF0FF; border-bottom: solid 3px black;">
 		<b:navbarLinks>
 			<b:navLink value="    " href="#"></b:navLink>
 		</b:navbarLinks>
 		<b:navbarLinks>
-			<b:navLink value="Gestion Categories" href="gestionCategories.xhtml"></b:navLink>
-			<b:navLink value="Gestion Admin" href="gestionUser.xhtml"></b:navLink>
-			<b:navLink value="Gestion Produits" href="GestionProduit.xhtml"></b:navLink>
-			<b:dropMenu value="Catégories">
-				<b:navLink value="#{categorieBean.categorie.nomCategorie}"></b:navLink>
-				<b:navLink value="Rôle" href="#"></b:navLink>
-			</b:dropMenu>
+			<b:navLink rendered="#{connexionBean.user.roleName == 'AdminCat'}"
+				value="Gestion Categories" href="gestionCategories.xhtml"
+				style="color:#FFA07A;"></b:navLink>
+			<b:navLink rendered="#{connexionBean.user.roleName == 'AdminProd'}"
+				disabled="true" value="Gestion Categories"
+				href="gestionCategories.xhtml" style="color:#FFA07A;"></b:navLink>
+			<b:navLink rendered="#{connexionBean.user.roleName == 'AdminCat'}"
+				value="Gestion Admin" href="gestionUser.xhtml"
+				style="color:#FFA07A;"></b:navLink>
+			<b:navLink rendered="#{connexionBean.user.roleName == 'AdminProd'}"
+				disabled="true" value="Gestion Admin" href="gestionUser.xhtml"
+				style="color:#FFA07A;"></b:navLink>
+			<b:navLink rendered="#{connexionBean.user.roleName == 'AdminProd'}"
+				value="Gestion Produits" href="GestionProduit.xhtml"
+				style="color:#FFA07A;"></b:navLink>
+			<b:navLink rendered="#{connexionBean.user.roleName == 'AdminCat'}"
+				value="Gestion Produits" href="GestionProduit.xhtml"
+				style="color:#FFA07A;"></b:navLink>
 		</b:navbarLinks>
 		<b:navbarLinks pull="left">
 			<b:navLink value="    " href="#"></b:navLink>
 		</b:navbarLinks>
 		<h:form class="navbar-form navbar-left hidden-md hidden-sm hidden-xs"
 			role="search">
+			<p:selectOneMenu id="categorie" value="#{rechercheBean.nomCategorie}">
+				<f:selectItem itemLabel="Choisir Catégorie" itemValue="#{null}"
+					noSelectionOption="true" />
+
+				<f:selectItems value="#{categorieBean.findAllCat()}" var="cat"
+					itemLabel="#{cat.nomCategorie}" itemValue="#{cat.nomCategorie}" />
+			</p:selectOneMenu>
+
 			<div class="form-group">
-				<input type="text" class="form-control" placeholder="Search" />
+				<p:inputText value="#{rechercheBean.keywords}" />
 			</div>
-			<button type="submit" class="btn btn-default">Submit</button>
+			<h:commandButton action="MagasinFiltre.xhtml"
+				actionListener="#{rechercheBean.getListeSelonFiltre()}"
+				value="Rechercher" class="btn btn-default" />
 		</h:form>
-		<!-- Following line is needed for TBS 3.0.1 (panel content overflow issue) -->
-
 		<b:navbarLinks pull="right" styleClass="hidden-xs">
-			<b:dropMenu value="Profil">
-				<b:navLink value="Nom"></b:navLink>
-				<b:navLink value="Rôle" href="#"></b:navLink>
+			<b:dropMenu style="color:#FFA07A;" value="Profil">
+				<b:navLink value="#{connexionBean.user.userName}"></b:navLink>
+				<b:navLink value="#{connexionBean.user.roleName}"></b:navLink>
+				<h:form>
+				<b:commandButton style="text-align:center;" value="Déconnexion"
+					action="#{connexionBean.deconnexionAdmin()}"></b:commandButton>
+				</h:form>
 			</b:dropMenu>
-			<b:navLink value="Panier" href="panier.xhtml"></b:navLink>
-			<b:navLink value="Déconnexion"
-				href="#{connexionBean.deconnexionAdmin()}"></b:navLink>
-
+			<b:navLink style="color:#FFA07A;" value="Panier" href="panier.xhtml"></b:navLink>
 		</b:navbarLinks>
 	</b:navBar>
 
-</body>
+	<div class="p-field p-col-12 p-md-12" style="margin-bottom: 4rem">
+		<p:linkButton action="#" icon="pi pi-th-large" id="button-grid">
+		</p:linkButton>
+
+		<p:linkButton action="#" id="button-list" icon="pi pi-list">
+		</p:linkButton>
+	</div>
+
+	<br />
+	<br />
+
+
+	<div id="gridproduit" style="display: none">
+		<p:repeat var="produit" value="#{produitBean.findAllProduit()}">
+			<div class="p-field p-col-12 p-md-4 produit-grid-conteneur-parent">
+				<div class="produit-grid-conteneur-individuel-enfant btnPopup">
+					<h:graphicImage class="produit-grille-image" library="images/"
+						name="#{produit.photo}" />
+					<p class="produit-grille-designation">#{produit.nomProduit}</p>
+					<div>
+
+						<h:form style="float: right">
+							<p:selectOneMenu id="quantite" required="true"
+								value="#{panierBean.quantite}">
+								<f:selectItems
+									value="#{produitBean.getListeQuantite(produit.idProduit)}"
+									var="qtt" itemLabel="#{qtt}" itemValue="#{qtt}" />
+								<p:ajax event="change" process="@this" update="@this"></p:ajax>
+							</p:selectOneMenu>
+
+							<p:commandButton icon="pi pi-shopping-cart"
+								style="margin-right:20px;" action="#"
+								actionListener="#{panierBean.ajouterLigneCommande}">
+							</p:commandButton>
+							<f:param name="idProduit" value="#{produit.idProduit}" />
+							<f:param name="prix" value="#{produit.prix}" />
+
+						</h:form>
+
+						<p class="produit-grille-prix">#{produit.prix} €</p>
+						<p class="produit-grille-quantite">
+							Quantité disponible : <span class="span-modif-quantite">#{produit.quantite}
+								pcs</span>
+						</p>
+					</div>
+				</div>
+			</div>
+		</p:repeat>
+	</div>
+
+
+	<div id="listproduit" style="display: block">
+		<p:repeat var="produit" value="#{produitBean.findAllProduit()}">
+			<div class="p-field p-col-12 p-md-12 produit-liste-conteneur-global">
+				<div class="produit-liste-conteneur">
+					<p class="produit-liste-designation">#{produit.nomProduit}</p>
+					<div class="p-field p-col-12 p-md-3 produit-image-conteneur">
+						<h:graphicImage class="produit-liste-image" library="images/"
+							name="#{produit.photo}" />
+					</div>
+					<div class="p-field p-col-12 p-md-9 produit-liste-conteneur-infos">
+						<div
+							class="p-field p-col-12 p-md-4 produit-liste-conteneur-description">
+							<p class="produit-liste-description">
+								Description : <br /> <span class="span-modif-description">#{produit.description}</span>
+							</p>
+						</div>
+						<div
+							class="p-field p-col-12 p-md-3 produit-liste-conteneur-prix-qtt">
+							<p class="produit-liste-prix">
+								Prix : <span class="span-modif-prix">#{produit.prix} €</span>
+							</p>
+							<p class="produit-liste-quantite">
+								Quantité disponible : <span class="span-modif-quantite">#{produit.quantite}</span>
+							</p>
+						</div>
+						<h:form>
+							<p:selectOneMenu id="quantite" value="#{panierBean.quantite}">
+								<f:selectItems
+									value="#{produitBean.getListeQuantite(produit.idProduit)}"
+									var="qtt" itemLabel="#{qtt}" itemValue="#{qtt}" />
+								<p:ajax event="change" process="@this" update="@this"></p:ajax>
+							</p:selectOneMenu>
+
+							<p:commandButton value="Ajouter au Panier"
+								icon="pi pi-shopping-cart" style="margin-right:20px;" action="#"
+								actionListener="#{panierBean.ajouterLigneCommande}">
+								<f:param name="produitID" value="#{produit.idProduit}" />
+								<f:param name="prix" value="#{produit.prix}" />
+							</p:commandButton>
+
+
+						</h:form>
+					</div>
+				</div>
+				<div class="p-field p-col-12 p-md-3 categorie-liste-conteneur">
+					<p:repeat var="categorie" value="#{categorieBean.findAllCat()}">
+						<h:graphicImage class="categorie-liste-image" library="images/"
+							name="#{categorie.photo}"
+							rendered="#{produit.idCategorie == categorie.idCategorie}" />
+						<p class="categorie-liste-nom">
+							<h:outputText value="#{categorie.nomCategorie}"
+								rendered="#{produit.idCategorie == categorie.idCategorie}" />
+						</p>
+					</p:repeat>
+				</div>
+				<hr />
+			</div>
+		</p:repeat>
+	</div>
+
+
+	<h:outputScript library="scripts" name="scriptListGrid.js" />
+
+	<h:outputScript library="primefaces" name="jquery/jquery.js"
+		target="head" />
+
+
+</h:body>
 </html>
