--- a/projet_app_web_commerce/WebContent/editerProduit.xhtml
+++ b/projet_app_web_commerce/WebContent/editerProduit.xhtml
@@ -17,14 +17,26 @@
 		library="primefaces" />
 
 </h:head>
-<body>
+<h:body style="background-color: #FFF5EB">
 
-	<b:navBar id="header" brand="Brand" brandHref="#" fluid="true">
+	<b:navBar id="header" brand="Brand" brandHref="Magasin.xhtml" fluid="true">
 		<b:navbarLinks pull="left">
 			<b:navLink value="    " href="#"></b:navLink>
 		</b:navbarLinks>
 		<b:navbarLinks>
-			<b:navLink value="Link" href="#"></b:navLink>
+			<b:navLink rendered="#{connexionBean.user.roleName == 'AdminCat'}"
+				value="Gestion Categories" href="gestionCategories.xhtml" style="color:#FFA07A;"></b:navLink>
+			<b:navLink rendered="#{connexionBean.user.roleName == 'AdminProd'}"
+				disabled="true" value="Gestion Categories"
+				href="gestionCategories.xhtml" style="color:#FFA07A;"></b:navLink>
+			<b:navLink rendered="#{connexionBean.user.roleName == 'AdminCat'}"
+				value="Gestion Admin" href="gestionUser.xhtml" style="color:#FFA07A;"></b:navLink>
+			<b:navLink rendered="#{connexionBean.user.roleName == 'AdminProd'}"
+				disabled="true" value="Gestion Admin" href="gestionUser.xhtml" style="color:#FFA07A;"></b:navLink>
+			<b:navLink rendered="#{connexionBean.user.roleName == 'AdminProd'}"
+				value="Gestion Produits" href="GestionProduit.xhtml" style="color:#FFA07A;"></b:navLink>
+			<b:navLink rendered="#{connexionBean.user.roleName == 'AdminCat'}"
+				value="Gestion Produits" href="GestionProduit.xhtml" style="color:#FFA07A;"></b:navLink>
 		</b:navbarLinks>
 		<b:navbarLinks pull="left">
 			<b:navLink value="    " href="#"></b:navLink>
@@ -144,9 +156,11 @@
 				<h:graphicImage class="image-editer-produit" library="images"
 					value="#{produitBean.produit.photo}"
 					rendered="#{produitBean.produit.idProduit gt 0}" />
-				<h:inputFile rendered="#{produitBean.produit.idProduit gt 0}" class="bouton-file-modif" id="file-modif"
+				<h:inputFile rendered="#{produitBean.produit.idProduit gt 0}"
+					class="bouton-file-modif" id="file-modif"
 					value="#{produitBean.uploadedFile}" />
-				<h:inputFile rendered="#{produitBean.produit.idProduit == 0}" class="bouton-file-ajout" id="file-ajout"
+				<h:inputFile rendered="#{produitBean.produit.idProduit == 0}"
+					class="bouton-file-ajout" id="file-ajout"
 					value="#{produitBean.uploadedFile}" />
 			</h:panelGroup>
 
@@ -154,18 +168,22 @@
 
 		<div class="div-bouton-validation">
 
-			<p:commandButton rendered="#{produitBean.produit.idProduit == 0}"
-				value="Ajouter" action="GestionProduit"
+			<h:commandButton
+				class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only"
+				rendered="#{produitBean.produit.idProduit == 0}" value="Ajouter"
+				action="GestionProduit"
 				actionListener="#{produitBean.ajouterProduit()}" />
 
 
-			<p:commandButton rendered="#{produitBean.produit.idProduit gt 0}"
-				value="Modifier" action="GestionProduit"
+			<h:commandButton
+				class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only"
+				rendered="#{produitBean.produit.idProduit gt 0}" value="Modifier"
+				action="GestionProduit"
 				actionListener="#{produitBean.modifierProduit()}" />
 		</div>
 
 	</h:form>
 
-</body>
+</h:body>
 </html>
 
