petit rajout (nom des pages web)

--- a/projet_app_web_commerce/WebContent/GestionProduit.xhtml
+++ b/projet_app_web_commerce/WebContent/GestionProduit.xhtml
@@ -7,6 +7,8 @@
 
 <h:head>
 
+	<title> Page d'accueil de la gestion des produits</title>
+
 	<h:outputStylesheet library="style" name="primeFlex.css" />
 
 	<h:outputStylesheet library="style" name="DataTableProduit.css" />
