--- a/projet_app_web_commerce/WebContent/editerProduit.xhtml
+++ b/projet_app_web_commerce/WebContent/editerProduit.xhtml
@@ -19,45 +19,7 @@
 </h:head>
 <body>
 
-	<b:navBar id="header" brand="Brand" brandHref="#" fluid="true">
-		<b:navbarLinks pull="left">
-			<b:navLink value="    " href="#"></b:navLink>
-		</b:navbarLinks>
-		<b:navbarLinks>
-			<b:navLink value="Link" href="#"></b:navLink>
-		</b:navbarLinks>
-		<b:navbarLinks pull="left">
-			<b:navLink value="    " href="#"></b:navLink>
-		</b:navbarLinks>
-		<h:form class="navbar-form navbar-left hidden-md hidden-sm hidden-xs"
-			role="search">
-
-
-			<p:selectOneMenu id="categorie" value="#{rechercheBean.nomCategorie}">
-				<f:selectItem itemLabel="Choisir Catégorie" itemValue="#{null}"
-					noSelectionOption="true" />
-
-				<f:selectItems value="#{categorieBean.findAllCat()}" var="cat"
-					itemLabel="#{cat.nomCategorie}" itemValue="#{cat.nomCategorie}" />
-			</p:selectOneMenu>
-
-			<div class="form-group">
-				<p:inputText value="#{rechercheBean.keywords}" />
-			</div>
-			<h:commandButton action="MagasinFiltre.xhtml"
-				actionListener="#{rechercheBean.getListeSelonFiltre()}"
-				value="Rechercher" class="btn btn-default" />
-		</h:form>
-
-		<b:navbarLinks pull="right" styleClass="hidden-xs">
-			<b:navLink style="color:#FFA07A;" href="Magasin.xhtml">Magasin</b:navLink>
-			<b:navLink style="color:#FFA07A;" href="authentification.xhtml">S'identifier</b:navLink>
-			<b:navLink style="color:#FFA07A;" href="panier.xhtml">Panier</b:navLink>
-
-
-		</b:navbarLinks>
-
-	</b:navBar>
+	
 
 
 
@@ -154,12 +116,13 @@
 
 		<div class="div-bouton-validation">
 
-			<p:commandButton rendered="#{produitBean.produit.idProduit == 0}"
+
+			<b:commandButton  rendered="#{produitBean.produit.idProduit == 0}"
 				value="Ajouter" action="GestionProduit"
 				actionListener="#{produitBean.ajouterProduit()}" />
 
 
-			<p:commandButton rendered="#{produitBean.produit.idProduit gt 0}"
+			<b:commandButton  rendered="#{produitBean.produit.idProduit gt 0}"
 				value="Modifier" action="GestionProduit"
 				actionListener="#{produitBean.modifierProduit()}" />
 		</div>
